...

    <!-- GiphyFragmentPageAdapter -->
    <string name="GiphyFragmentPagerAdapter_gifs">GIFs</string>
    <string name="GiphyFragmentPagerAdapter_stickers">Stickers</string>

    <!-- GroupCreateActivity -->
    <string name="GroupCreateActivity_actionbar_title">New group</string>
    <string name="GroupCreateActivity_actionbar_edit_title">Edit group</string>
    <string name="GroupCreateActivity_group_name_hint">Group name</string>
    <string name="GroupCreateActivity_actionbar_mms_title">New MMS group</string>
    <string name="GroupCreateActivity_contacts_dont_support_push">You have selected a contact that doesn\'t support Signal groups, so this group will be MMS.</string>
    <string name="GroupCreateActivity_youre_not_registered_for_signal">You\'re not registered for Signal messages and calls, so Signal groups are disabled. Please try registering in Settings &gt; Advanced.</string>
    <string name="GroupCreateActivity_contacts_no_members">You need at least one person in your group!</string>
...
    <!-- conversation_activity -->
    <string name="conversation_activity__type_message_push">Signal message</string>
    <string name="conversation_activity__type_message_sms_insecure">Unsecured SMS</string>
    <string name="conversation_activity__type_message_mms_insecure">Unsecured MMS</string>
    <string name="conversation_activity__from_sim_name">From %1$s</string>
    <string name="conversation_activity__send">Send</string>
    <string name="conversation_activity__compose_description">Message composition</string>
    <string name="conversation_activity__emoji_toggle_description">Toggle emoji keyboard</string>
    <string name="conversation_activity__attachment_thumbnail">Attachment Thumbnail</string>
    <string name="conversation_activity__quick_attachment_drawer_toggle_camera_description">Toggle quick camera attachment drawer</string>
    <string name="conversation_activity__quick_attachment_drawer_record_and_send_audio_description">Record and send audio attachment</string>
    <string name="conversation_activity__enable_signal_for_sms">Enable Signal for SMS</string>

...
    <string name="AndroidManifest__create_passphrase">Create passphrase</string>
    <string name="AndroidManifest__select_contacts">Select contacts</string>
    <string name="AndroidManifest__change_passphrase">Change passphrase</string>
    <string name="AndroidManifest__verify_safety_number">Verify safety number</string>
    <string name="AndroidManifest__log_submit">Submit debug log</string>
    <string name="AndroidManifest__media_preview">Media preview</string>
    <string name="AndroidManifest__message_details">Message details</string>
    <string name="AndroidManifest__linked_devices">Linked devices</string>
    <string name="AndroidManifest__invite_friends">Invite friends</string>
    <string name="AndroidManifest_archived_conversations">Archived conversations</string>
    <string name="AndroidManifest_remove_photo">Remove photo</string>

    <!-- arrays.xml -->
...

    <!-- **************************************** -->
    <!-- menus -->
    <!-- **************************************** -->

    <!-- contact_selection_list -->
    <string name="contact_selection_list__unknown_contact">New message to...</string>

    <!-- conversation_callable_insecure -->
    <string name="conversation_callable_insecure__menu_call">Call</string>

    <!-- conversation_callable_secure -->
    <string name="conversation_callable_secure__menu_call">Signal call</string>
...

    <string name="conversation_list_item_inbox_zero__inbox_zeeerrro">Inbox zeeerrro</string>
    <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zip. Zilch. Zero. Nada.\nYou\'re all caught up!</string>


    <!-- conversation_list_fragment -->
    <string name="conversation_list_fragment__fab_content_description">New conversation</string>
    <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Give your inbox something to write home about. Get started by messaging a friend.</string>


    <!-- conversation_secure_verified -->
    <string name="conversation_secure_verified__menu_reset_secure_session">Reset secure session</string>

...
