<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReactionActivity">


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroupReaction"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_sad"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sad"
            android:onClick="onRadioButtonClicked"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radio_happy"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/smile"
            android:onClick="onRadioButtonClicked"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radio_wow"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/concerned"
            android:onClick="onRadioButtonClicked"
            android:textSize="30sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="Hello"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupReaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onRemoveButtonClicked"
        android:text="Remove Reaction"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupReaction" />

</android.support.constraint.ConstraintLayout>