...
    android:id="@+id/conversation_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:focusable="true"
    android:nextFocusLeft="@id/container"
    android:nextFocusRight="@id/embedded_text_editor"
    android:background="@drawable/conversation_item_background"
    android:clipToPadding="false"
    android:clipChildren="false">

    <RelativeLayout
        android:id="@+id/container"
...
                android:layout_marginTop="@dimen/message_bubble_top_padding"
                android:layout_marginBottom="@dimen/message_bubble_collapsed_footer_padding"
                android:layout_marginLeft="@dimen/message_bubble_horizontal_padding"
                android:layout_marginRight="@dimen/message_bubble_horizontal_padding" />

            <org.thoughtcrime.securesms.components.emoji.EmojiTextView
                android:id="@+id/conversation_item_body"
                style="@style/Signal.Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/message_bubble_horizontal_padding"
                android:layout_marginTop="@dimen/message_bubble_top_padding"
                android:layout_marginRight="@dimen/message_bubble_horizontal_padding"
...
