...
                android:layout_height="70dp"
                position="bottom_right"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/GroupCreateActivity_avatar_content_description" />

            <org.thoughtcrime.securesms.components.emoji.EmojiEditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:lines="1"
                android:maxLength="255"
...
